# DBDesign

./: .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  README.md  docker-compose.yml  sonar-project.properties  test_coverage_slide.pptx  test_slide_light.pptx  ~$test_slide_light.pptx
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-images.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  coverage.xml  domain_knowledge.md  pyproject.toml  requirements-dev.txt  requirements.txt  seed_commodities.py  seed_rag.py  verify_browse.py  verify_import.py  verify_rag.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/assets/: ecotea_template.xlsx
backend/app/converters/: __init__.py  base_model.py  ecotea_writer.py  engine.py
backend/app/converters/models/: __init__.py  vt_sg_pri.py  vt_sg_pwr.py
backend/app/llm/: __init__.py  provider.py
backend/app/rag/: __init__.py  chroma_client.py  embeddings.py  ingest.py  search.py
backend/app/routers/: browse.py  convert.py  health.py  imports.py  rag.py
backend/app/services/: excel_importer.py  value_cleaner.py
backend/app/tools/: __init__.py  _base.py  chart.py  emission.py  forecast.py  sql_runner.py  terminology.py  unit_convert.py
backend/tests/: _db_fixture.py  conftest.py  test_base_model.py  test_ecotea_writer.py  test_engine.py  test_excel_importer.py  test_excel_importer_e2e.py  test_health.py  test_llm_provider.py  test_rag.py  test_routers_browse.py  test_routers_convert.py  test_routers_imports.py  test_tool_chart.py  test_tool_emission.py  test_tool_forecast.py  test_tool_sql_runner.py  test_tool_terminology.py  test_tool_unit_convert.py  test_value_cleaner.py  test_vt_sg_pri.py  test_vt_sg_pwr.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.config.ts.timestamp-1778722842905-c6e1f20c605a1.mjs  vitest.config.ts.timestamp-1778735515462-7d2916a561c6b.mjs
frontend/coverage/: index.html  lcov.info
frontend/src/: App.tsx  api.ts  (+2 more)
sql/: 001_init_schema.sql  002_migrate_v2_to_v3.sql
(+48 files in other folders)
